# grapyql

./: README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: python-package.yml
grapyql/: client.py
src/grapyql/: __init__.py  client.py  components.py  errors.py  old_client.py  operations.py
test/: test_client.py  test_components.py
