[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grapyql"
version = "0.1.0"
description = "GraphQL Client for Python"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "joewalk102" }
]
requires-python = ">=3.10"
dependencies = [
    "requests~=2.33.1",
]

[project.urls]
Homepage = "https://github.com/joewalk102/grapyql"
Repository = "https://github.com/joewalk102/grapyql"

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.flake8]
exclude = [
    "venv",
    ".venv",
    ".github",
    ".pytest_cache",
    "__pycache__",
]
per-file-ignores = { "__init__.py" = "F401" }
max-line-length = 100
statistics = true
show-source = true
count = true
